k8s/leocloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecosort
spec:
  rules:
    - host: if200166.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecosort-frontend
                port:
                  number: 3000
